# safeclaw

./: .gitignore  .npmignore  AGENTS.md  BUILD_NOTES.md  CLI_DESIGN.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  REVIEW_FIXES.md  SECURITY_AUDIT.md  SKILL.md  build.rs  entrypoint.sh  index.mjs  install.sh  package-lock.json  package.json  paths.mjs  safeclaw.md
.github/workflows/: release.yml
catalog/: README.md  services.json
demo/: README.md  demo.tape
design/: connection-schema.md  credential-broker.md  protocol.md  request-scope.md  stores-and-items.md
docs/: AGENT_AS_INTEGRATOR.md  AGENT_SURFACE_REDESIGN.md  APPROVAL_PROTOCOL_REVIEW.md  BROKER_SCHEMA_REWORK.md  BUILTIN-TARGET.md  CONNECTIONS_AND_AUTH.md  CONNECTION_IMPL_PLAN.md  CONNECTION_SCHEMA.md  CREDENTIAL_BROKER.md  CREDENTIAL_BROKER_V2_BUILD.md  DEPLOYMENT.md  DE_DAEMON.md  DIAGNOSTICS.md  GIT_INTEGRATION.md  POLICY.md  POLICY_RISK_TIERS.md  PROTOCOL.md  README.md  REQUEST_SCOPE.md  SERVICES.md  SMOKE_TEST_GCP.md  SSE_SYNC_DESIGN.md  STORES_AND_ITEMS.md  STREAMING_APPROVAL.md  SYNC.md  agents.md  approvals.md  broker.md  connections.md  core-crypto-draft.md  design-principles.md  for-your-agent.md  git-streaming-skill-draft.md  overview.md  quickstart.md  sc-run.md  security-model.md  vault.md
docs/guides/: README.md  for-your-agent.md  sc-run.md
docs/internals/: connection-schema.md  credential-broker.md  protocol.md  request-scope.md  stores-and-items.md  sync.md
docs/reference/: consent-templates.md  diagnostics.md  policy.md  services.md
docs/wiki/: README.md  agents.md  broker.md  connections.md  design-principles.md  security-model.md
examples/: hpke_interop.rs
lib/: crypto.mjs  proxy.mjs  server.mjs
public/: admin.html  index.html  safeclaw-client.js  setup.html  unlock.html
rust-rewrite/: ARCHITECTURE.md
scripts/: release.sh
services/_parked/files/: policy.toml  service.toml
services/_parked/nodpay/: service.toml
services/_parked/wechat/: service.toml
services/_providers/: google.toml
services/anthropic/: service.toml
services/channel/telegram/: recipe.toml  service.toml
services/channel/wechat/: recipe.toml  service.toml
services/channel/weixin/: recipe.toml  service.toml
services/circleci/: policy.toml  service.toml
services/cloudflare_dns/: policy.toml  service.toml
services/cratesio/: policy.toml  service.toml
services/deepseek/: service.toml
services/ga4/: service.toml
services/gcalendar/: service.toml
services/gcp/: policy.toml  service.toml
services/gdrive/: policy.toml  service.toml
services/gemini/: service.toml
services/github/: policy.toml  service.toml
services/gitlab/: policy.toml  service.toml
services/gmail/: service.toml
services/googledocs/: policy.toml  service.toml
services/googlesheets/: policy.toml  service.toml
services/googleslides/: policy.toml  service.toml
services/googletasks/: policy.toml  service.toml
services/groq/: service.toml
services/inbox/: policy.toml  service.toml
services/integration/brave/: service.toml
services/integration/cratesio/: service.toml
services/integration/demo/: policy.toml  service.toml
services/integration/gcalendar/: policy.toml  service.toml
services/integration/gdrive/: policy.toml  service.toml
services/integration/github/: policy.toml  service.toml
services/integration/github-git/: service.toml
services/integration/gmail/: policy.toml  (+1 more)
services/linear/: service.toml
services/neon/: policy.toml  service.toml
services/netlify/: service.toml
services/npm/: service.toml
services/openai/: service.toml
services/openai_codex/: service.toml
services/railway/: policy.toml  service.toml
services/snaplii/: policy.toml  service.toml
services/supabase/: policy.toml  service.toml
services/telegram/: service.toml
services/vercel/: policy.toml  service.toml
src/: api_key.rs  approval.rs  audit.rs  cloud_sync.rs  config.rs  error.rs  generate.rs  lib.rs  local_bearer.rs  main.rs  policy.rs  secret_json.rs  state.rs  sync.rs  sync_stream.rs  tests.rs  update.rs  vault.rs  webpush.rs
src/approval/: mod.rs  store.rs
src/auth/: basic.rs  bearer.rs  connect.rs  header.rs  loopback.rs  mod.rs  nonce.rs  oauth2.rs  path.rs  query.rs  snaplii.rs  webauthn.rs
src/cli/: active.rs  admin.rs  agent.rs  apierr.rs  approve.rs  callback.rs  config.rs  conn.rs  connect.rs  custodian.rs  discovery.rs  doctor.rs  egress_proxy.rs  env.rs  generate.rs  git_credential.rs  help.rs  install.rs  logging.rs  login.rs  logout.rs  ls.rs  mod.rs  neterr.rs  op.rs  passkey.rs  profile.rs  proxy.rs  proxy_env.rs  read.rs  recipe.rs  run.rs  secret.rs  service.rs  service_def.rs  status.rs  store.rs  stores.rs  sync.rs  unlock.rs  (+7 more)
src/cooker/: mod.rs  nl.rs
src/core/: approval.rs  forward.rs  host.rs  mod.rs  policy.rs  router.rs
src/crypto/: aead.rs  aes.rs  binding.rs  canonical.rs  dek_wraps.rs  ecies.rs  envelope.rs  kdf.rs  keys.rs  mod.rs  vault_file.rs
src/notify/: mod.rs  webpush.rs
src/passkey/: challenge.rs  mod.rs  webauthn.rs
src/protocol/: acts.toml  consent.rs  grant.rs  mod.rs  operation.rs  render.rs
src/provider/: anthropic.rs  default.rs  google.rs  mod.rs  openai.rs
src/proxy/: api_face.rs  ca.rs  env.rs  forward.rs  handler.rs  locked.rs  mod.rs  resolver.rs  safeclaw_vault.rs  stream.rs  upstream.rs  use_broker.rs
src/relay/: client.rs  mod.rs
src/server/: broker.rs  broker_flow.rs  cors.rs  mod.rs  routes.rs  static_files.rs  tenant_extractor.rs
src/service/: anthropic.rs  default.rs  google.rs  locked.rs  mod.rs  openai.rs  validate.rs
src/storage/: item.rs  mod.rs  pending_passkey.rs  plaintext.rs  sealed_vault.rs  tenant_dir.rs  vault_dir.rs
src/store/: adapter.rs  mod.rs
static/: safeclaw-skill.md
static/cli-auth/: index.html  main.js
static/op-page/: index.html  main.js
templates/: agents-snippet.md  safeclaw.md  skill.md
templates/archive/: skill-cron-watcher.md
test/: cross-test.mjs  crypto.test.mjs  helpers.mjs  proxy.test.mjs  security.test.mjs  server.test.mjs
tests/: setup_reveal_e2e.rs
(+69 files in other folders)
