[package]
name = "safeclaw"
version = "1.0.0-demo.1"
edition = "2021"
description = "SafeClaw daemon — multi-tenant passkey-gated credential vault for AI agents"
license = "Apache-2.0"
repository = "https://github.com/xhyumiracle/safeclaw"

[dependencies]
# HTTP
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Crypto
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "jwk"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Misc
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
