[package]
name = "safeclaw"
version = "1.0.0-demo.4"
edition = "2021"
description = "SafeClaw daemon — multi-tenant passkey-gated credential vault for AI agents"
license = "Apache-2.0"
repository = "https://github.com/xhyumiracle/safeclaw"

[dependencies]
# HTTP
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Protocol / crypto core — see [[sudp-crate]]. SafeClaw is a custodian
# implementation; sudp provides the abstract protocol + standard cryptographic
# profile (Hash/Kdf/Aead/KeyWrap, β computation, grant validation, WebAuthn
# Authenticator). We keep p256 direct only for places sudp doesn't yet cover.
sudp = { version = "0.1", features = ["std-primitives", "webauthn", "json-canonical"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "jwk"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Broker / service routing (ported from dev branch)
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
toml = "0.8"
dirs = "5"
url = "2"

# Misc
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

# Store adapters — GCP Secret Manager (REST + SA JWT)
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
