[package]
name = "safeclaw"
version = "0.9.2"
edition = "2021"
description = "SafeClaw daemon — multi-vault passkey-gated credential vault for AI agents"
# Functional Source License 1.1 (Apache-2.0 future). FSL is not an SPDX id,
# so we point at the LICENSE file. Use is unrestricted EXCEPT "Competing Use"
# (offering a substitute commercial product/service); converts to Apache-2.0
# two years after each release. See LICENSE.
license-file = "LICENSE"
repository = "https://github.com/SafeClaw-OSS/safeclaw"

# Two bin targets share the same main.rs:
#   `safeclaw` — canonical name (discoverable via brew/cargo install)
#   `sc`       — short alias for daily use (cf. `op`, `gh`, `bw`)
[[bin]]
name = "safeclaw"
path = "src/main.rs"

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
# HTTP
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Protocol / crypto core — see [[sudp-crate]]. SafeClaw is a custodian
# implementation; sudp provides the abstract protocol + standard cryptographic
# profile (Hash/Kdf/Aead/KeyWrap, β computation, grant validation, WebAuthn
# Authenticator). We keep p256 direct only for places sudp doesn't yet cover.
sudp = { version = "0.2", features = ["std-primitives", "webauthn", "json-canonical"] }
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "jwk"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
# HPKE outer envelope (PROTOCOL.md §4.2 M1) — daemon-static sc_pk/sc_sk used
# for cross-device pending-passkey seals. Suite: DHKEM(X25519, HKDF-SHA-256)
# + HKDF-SHA-256 + ChaCha20-Poly1305 (= PROTOCOL.md §4.2 mandated).
hpke = { version = "0.12", features = ["x25519"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Broker / service routing (ported from dev branch)
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"

# Resident credential proxy — the one agent-facing surface. hudsucker is a
# localhost HTTPS MITM (HTTP CONNECT). Default features
# (decoder/rcgen-ca/rustls-client) are pure-rustls (aws-lc-rs), NO OpenSSL. It
# re-exports rcgen + rustls + tokio_rustls + hyper so our versions line up with
# reqwest 0.12 (rustls 0.23 / tokio-rustls 0.26). http-body-util gives us
# BodyExt::collect for the bounded body scan.
hudsucker = "0.24"
http-body-util = "0.1"
toml = "0.8"
dirs = "5"
url = "2"
urlencoding = "2"

# Misc
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Hidden value prompts for `sc set` / `sc connect` (keeps a secret out of shell
# history / `ps`).
rpassword = "7"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

# Store adapters — GCP Secret Manager (REST + SA JWT)
jsonwebtoken = "9"

# Per-tenant audit log (SQLite); bundled so deployments don't need libsqlite3
# on the host. See src/audit.rs + PROTOCOL.md §5.3 layout.
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
